[package]
name = "one-shot-bench"
version = "0.1.0"
authors = ["Anton-4 <17049058+Anton-4@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
iai = "0.1"

[[bench]]
name = "my_benchmark"
harness = false
